@@ -12,9 +12,22 @@
 
 	<H3 _HD_OMIT_TOC>New Features</H3>
 
+	<LI>HTMLDOC now offers an "htmlsep" output type which
+	generates HTML output with a separate file for each
+	heading in the table of contents.
+
+	<LI>HTMLDOC now includes LINK elements in generated HTML
+	so that intelligent browsers like Mozilla can show
+	next/prev/contents/top buttons.
+
 	<H3 _HD_OMIT_TOC>Changes</H3>
 
 	<H3 _HD_OMIT_TOC>Bug Fixes</H3>
+
+	<LI>HTMLDOC didn't read back the HTTP response properly in
+	all situations.
+
+	<LI>Fixed some more PNG transparency cases.
 
 </UL>
 
