@@ -2,8 +2,8 @@
 <HEAD>
 	<META NAME="author" CONTENT="Easy Software Products">
 	<META NAME="copyright" CONTENT="Copyright 1997-2003, See the GNU General Public License for Details.">
-	<META NAME="docnumber" CONTENT="ESP-003-20031023">
-	<TITLE>HTMLDOC 1.8.23 Software Users Manual</TITLE>
+	<META NAME="docnumber" CONTENT="ESP-003-20030108">
+	<TITLE>HTMLDOC 1.8.24 Software Users Manual</TITLE>
 </HEAD>
 <BODY>
 
@@ -13,7 +13,7 @@
 <H1 ALIGN="RIGHT"><A NAME="INTRO">Introduction</A></H1>
 
 This document describes how to use the <I>HTMLDOC</I> software, version
-1.8.23. <I>HTMLDOC</I> converts Hyper-Text Markup Language ("HTML") input
+1.8.24. <I>HTMLDOC</I> converts Hyper-Text Markup Language ("HTML") input
 files into indexed HTML, Adobe&reg; PostScript&reg;, or Adobe Portable
 Document Format ("PDF") files. 
 
